Convert to more modern String methods
Written by Claude.