@@ -341,7 +341,7 @@ public final class S3Proxy {
 
             String maximumTimeSkew = properties.getProperty(
                     S3ProxyConstants.PROPERTY_MAXIMUM_TIME_SKEW);
-            if (maximumTimeSkew != null && !maximumTimeSkew.trim().isEmpty()) {
+            if (maximumTimeSkew != null && !maximumTimeSkew.isBlank()) {
                 builder.maximumTimeSkew(Integer.parseInt(maximumTimeSkew));
             }
 
